# ocular-bot

./: .gitignore  LICENSE  README.md  bot.py  config.yml  mkdocs.yml  operations.py  pyproject.toml
assets/inputs/: mounts.json
cogs/: adminonly.py  dataops.py  general.py
docs/: index.md
docs/api-reference/: adminonly.md  operations.md
docs/commands/: adminonly.md  dataedit.md  general.md
docs/user-guide/: commands.md  entry-names.md
src/ocular/: adminonly.py  bot.py  dataedit.py  dataops.py  general.py  operations.py
tests/: test_operations.py
